--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <title></title>
+  <!-- iconj.com favicon code -->
+  <link rel="shortcut icon" href="http://www.iconj.com/icon.php?pid=oyjx3ud7hg" type="image/x-icon" />
+  <link rel="shortcut icon" href="http://www.iconj.com/gif_icon.php?pid=oyjx3ud7hg" type="image/gif" /> 
+  <!-- end of iconj.com favicon code -->
   <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="weatherApp">
@@ -9,16 +13,13 @@
   <h1>Forecast.io Weather API</h1>
   
   <div class="list" ng-controller="weatherCtrl">
-    <div class="add">
-
-        {{hello}}
-        
-       {{weather}}
-      </div>
-    <todo></todo>
+    <div class="current">
+        {{weather.currently.apparentTemperature}}
+    </div>
+   
+    <h3> Alerts </h3>
+    <h4 ng-repeat="alert in alerts">{{alert.title}}</h4>
    </div>
-
-  
   <script src="/scripts/vendor.bundle.js"></script>
   <script src="/scripts/app.bundle.js"></script>
 
