cleaned up the server.js file

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
   
   <div class="list" ng-controller="weatherCtrl">
     <div class="current">
-        {{weather.currently.apparentTemperature}}
+        <h3> Alerts </h3>
+        <h4>{{weather.currently.apparentTemperature}}</h4>
     </div>
    
     <h3> Alerts </h3>
